[package]
name = "rustanel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.23.0", features = ["wgpu"] }
egui_extras = { version = "*", features = ["image"] }
enum-map = "2.6.3"
lazy_static = "1.4.0"
lazy-regex = { version = "3.0.2", features = ["std"] }
