[package]
name = "rustanel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.33.0", features = ["wgpu"] }
egui_extras = { version = "0.33.0", features = ["image"] }
enum-map = "2.7.3"
lazy_static = "1.5.0"
lazy-regex = { version = "3.4.1", features = ["std"] }
web-time = "1.1.0"
